@@ -63,8 +63,9 @@
 #define MSP_ADC_DT_DPP 0x2
 #define MSP_ADC_LU 0x3
 #define MSP_ADC_TD_SN 0x4
-#define MSP_SBC_THIN_PROV 0x2
+#define MSP_SBC_LB_PROV 0x2
 #define MSP_SSC_CDP 0xf0
+#define MSP_SBC_APP_TAG 0xf0
 
 #define MODE_DATA_OVERHEAD 128
 #define EBUFF_SZ 256
@@ -95,7 +96,7 @@
 #define VPD_MAN_ASS_SN 0xb1     /* SSC-3, ADC-2 */
 #define VPD_SECURITY_TOKEN 0xb1 /* OSD */
 #define VPD_TA_SUPPORTED 0xb2   /* SSC-3 */
-#define VPD_THIN_PROVISIONING 0xb2   /* SBC-3 */
+#define VPD_LB_PROVISIONING 0xb2   /* SBC-3 */
 #define VPD_REFERRALS 0xb3
 #define VPD_AUTOMATION_DEV_SN 0xb3   /* SSC-3 */
 #define VPD_DTDE_ADDRESS 0xb4   /* SSC-4 */
